# dumake

./: CMakeLists.txt  README.md  main.cpp
include/: executor.h  parser.h  target.h
src/: executor.cpp  parser.cpp  target.cpp
tests/: example.dk
